src/redisearch_rs/rune_trie_snapshots/tests/integration/snapshots/lex_range_inclusive_both_ends.snap
---
source: rune_trie_snapshots/tests/integration/range_iteration.rs
expression: dump
---
size: 7

query: [apple, cherry] inclusive  min="apple" (inc=true)  max="cherry" (inc=true)
  apple       numDocs=1
  apricot     numDocs=1
  banana      numDocs=1
  band        numDocs=1
  bandana     numDocs=1
  cherry      numDocs=1
