src/redisearch_rs/rune_trie_snapshots/tests/integration/snapshots/lex_range_min_greater_than_max.snap
---
source: rune_trie_snapshots/tests/integration/range_iteration.rs
expression: dump
---
size: 7

query: [cherry, apple] inverted  min="cherry" (inc=true)  max="apple" (inc=true)
  <no matches>
