src/redisearch_rs/rune_trie_snapshots/tests/integration/snapshots/lex_wildcard_escape.snap
---
source: rune_trie_snapshots/tests/integration/wildcard_iteration.rs
expression: dump
---
size: 7

query: \*  pattern="\\*"
  <no matches>
