src/redisearch_rs/rune_trie_snapshots/tests/integration/snapshots/lex_wildcard_middle_star.snap
---
source: rune_trie_snapshots/tests/integration/wildcard_iteration.rs
expression: dump
---
size: 7

query: c*t  pattern="c*t"
  cat         numDocs=1
  concat      numDocs=1
